LPD-82250 Update build summaries
